--- a/Dikaajakamu.html
+++ b/Dikaajakamu.html
@@ -55,7 +55,7 @@
 <body>
     <div class="profile-card">
         <img src="https://i.ibb.co/fq8QhHY/IMG-20240426-WA0141.jpg" alt="Profile Picture" class="profile-pic">
-        <h1>𝐃𝐈𝙕𝙓 𝐌𝐀𝐑𝐊𝐄𝐓 <span class="verified">✔</span></h1>
+        <h1>DIKZSTORE <span class="verified">✔</span></h1>
         <p>hanya sebuah gabut</p>
         <div class="social-icons">
             <a href="https://www.facebook.com/profile.php?id=100054745391702"><img src="https://i.ibb.co/41P9BPx/Facebook.jpg" alt="Facebook"></a>
